--- a/04-week4.Rmd
+++ b/04-week4.Rmd
@@ -1,15 +1,295 @@
-# Footnotes and citations 
+# 統計的検定
 
-## Footnotes
-
-Footnotes are put inside the square brackets after a caret `^[]`. Like this one ^[This is a footnote.]. 
-
-## Citations
-
-Reference items in your bibliography file(s) using `@key`.
-
-For example, we are using the **bookdown** package [@R-bookdown] (check out the last code chunk in index.Rmd to see how this citation key was added) in this sample book, which was built on top of R Markdown and **knitr** [@xie2015] (this citation was added manually in an external file book.bib). 
-Note that the `.bib` files need to be listed in the index.Rmd with the YAML `bibliography` key.
+```{r, include=FALSE}
+library(tidyverse)
+library(patchwork)
+```
 
 
-The RStudio Visual Markdown Editor can also make it easier to insert citations: <https://rstudio.github.io/visual-markdown-editing/#/citations>
+## 事前の確認
+
+- この講義のRプロジェクトを開いていますか？
+- 英数字で名前を付けた本日の講義のファイルを作成しましたか？
+
+  - .Rでも.Rmdでもどちらでも大丈夫です。
+
+## 今日の目標
+
+1. 
+2. 
+
+## 統計的検定（statistical test）
+- 母数についての推定（「日本人の男子の平均身長は170 cmだ」）が合っているかを、統計的に検定する
+
+### 統計的検定の論理
+- 母集団からサンプリングした標本から、母数についての推定が合っているかを議論できない。しかし、確率的な範囲であれば、推定が間違っているかを確かめることができる。
+
+  - 標本から計算した95%信頼区間が160 cmから167cmだった場合、母数は170cmよりも小さい（推定は誤り）
+  - 標本から計算した95%信頼区間が167 cmから175cmだった場合、推定が合っているか誤りなのか分からない（信頼区間が170 cmを含んでいるから）
+
+- 推測統計学における統計的検定の論理では、「母数についての等号（ = ）の仮説」が偽であることは言えるが、正しいとは言えない。
+
+- 「母数の等号についての仮説」を**帰無仮説（null hypothesis）**と呼ぶ
+  
+  - 帰無仮説は以下のように表す（*H*はhypothesisの頭文字）\[H_0: u = 170\]
+
+  - 統計的検定では、帰無仮説が偽であるかを検定する。
+  
+    - **背理法**に似た方法であり、証明したい主張の否定の仮説を立て、得られた結果から主張できる結論が「矛盾」であることを示すことで、主張が正しいことを証明する。
+    
+      - 例：「世界には白いカラスがいる」と主張したい
+      - 「全てのカラスは黒い」という仮説を立てる（**帰無仮説**）
+      - 1羽でも白いカラスが見つかれば、帰無仮説は偽であり、「世界には白いカラスがいる」と主張できる。
+        - 仮説が偽と主張する（否定する）方が簡単
+        
+- **対立仮説**：帰無仮説の否定
+
+\[H_1: u ≠ 170\]
+
+  - 帰無仮説が否定されれば、対立仮説が真となる
+  
+  - 帰無仮説が偽であると判断できない場合、帰無仮説は保留になる（= 分からない）。
+  
+    - 帰無仮説は真であるということはできない。
+    
+### 統計検定の具体的な考え方
+
+- 帰無仮説が正しいと仮定する。標本から計算された統計量の実現値が、標本分布から考えて**十分低い**確率でしか生じないような値であれば、帰無仮説が偽であると判断する
+
+  - 注意点として、選んだ確率モデル（確率分布）が妥当でない場合、検定の結果も妥当ではなくなる。以下の例では、母集団からの標本抽出が正規分布で近似できるという仮定のもと行う。
+  
+- 例：
+  2025年度にT先生のクラス（40人）で実施された英語テストの平均点は60点であった。昨年度の平均点は55点であり、2025年度の平均点は、昨年度の平均点に比べ十分に高い得点であるかを検定する。
+  
+  - 帰無仮説 *u* = 55の下で、得点が平均パラメータ *u* = 50の正規分布に従うと仮定。
+  - クラス平均は60点、標準偏差は3であると分かった。
+  - 母分散が分からない場合、*t* 統計量を用いる。
+
+\[t = \frac{\overline{x} - \mu_0}{\frac{u}{\sqrt{n}}}\]
+
+  - 上記の値を代入し、
+  
+\[t = \frac{\overline{60} - 55}{\frac{3}{\sqrt{40}}}\]
+
+- 計算すると、 *t* = 10.54となる。このような検定のための統計量を**検定統計量**という。
+```{r}
+(60-55)/(3/sqrt(40))
+```
+
+- 自由度が39（40-1）で95%の範囲は0±2.02であるため、得られた*t*値がこの絶対値より大きいと棄却域に（青く塗られた箇所）に入ることになる。帰無仮説が真であると仮定したときの検定統計量の標本分布のことを**帰無分布（null distribution）**という。
+- 棄却域が占める割合を**有意水準（significance level）**と言い、*α*と表記する。慣例的に、両側合わせて0.05が用いられる。
+
+```{r}
+qt(0.975, df = (40-1))
+```
+
+```{r, echo=FALSE}
+# 自由度
+df <- 39
+
+# t分布の臨界値（両側検定, α = 0.05）
+t_crit <- qt(0.975, df)  # 片側2.5%の閾値
+
+# t分布のデータを作成
+x_vals <- seq(-4, 4, length = 1000)  # x軸の範囲
+y_vals <- dt(x_vals, df)  # 確率密度
+
+# データフレームを作成
+df_t <- data.frame(x = x_vals, y = y_vals)
+
+# ggplotで描画
+ggplot(df_t, aes(x, y)) +
+  geom_line(color = "black") +  # t分布の曲線
+  geom_area(data = subset(df_t, x >= t_crit), aes(x, y), fill = "blue", alpha = 0.5) +  # 右側棄却域
+  geom_area(data = subset(df_t, x <= -t_crit), aes(x, y), fill = "blue", alpha = 0.5) + # 左側棄却域
+  geom_vline(xintercept = c(-t_crit, t_crit), linetype = "dashed") +  # 臨界値の線
+  labs(title = "自由度39のt分布と棄却域 (α = 0.05)", x = "t値", y = "密度") +
+  theme_minimal()
+```
+
+- 得られた*t*値は2.02よりも大きく、棄却域に入る。従って、帰無仮説が真であると考えると、非常に小さい確率でしか起きない結果が得られたという帰無仮説が真であるという仮定と矛盾した結果となっている。この場合、**統計的に有意**であると表現する。
+
+  - つまり、「2025年度の平均点60点は、昨年度よりも統計的に高い得点である。」と主張できる。
+  
+  
+::: infobox
+2025年度の得点が昨年度よりも統計的有意に高いことは、**全員の得点が昨年度よりも高いことを必ずしも意味しない**ということに注意。比較しているのはあくまでも**平均点**。以下のどちらのデータでも統計的有意差が得られる。
+
+```{r, echo=FALSE}
+set.seed(123) # 再現性の確保
+
+# 条件1: すべての値が55点以上
+data1 <- pmax(rnorm(40, mean = 60, sd = 3), 55)
+
+# 条件2: 半分は55点未満
+data2 <- rnorm(40, mean = 60, sd = 3)
+data2 <- sort(data2) # 小さい順に並べる
+data2[1:20] <- qnorm(runif(20, 0, pnorm(55, mean = 60, sd = 3)), mean = 60, sd = 3) # 下半分を55未満に調整
+
+df <- data.frame(
+  ID = 1:40,
+  Data1 = data1,
+  Data2 = data2
+)
+
+```
+
+```{r, echo=FALSE}
+summary(data1)
+summary(data2)
+```
+
+- 黒い点線は平均値55点
+```{r, echo=FALSE, message=FALSE}
+a <- df %>%
+  ggplot(aes(Data1)) +
+  geom_histogram(fill = "skyblue", color = "black", alpha = 0.7, bins = 10) +
+  geom_vline(xintercept = 55, lwd = 2, linetype = "dashed") +
+  theme_minimal() 
+
+b <- df %>%
+  ggplot(aes(Data2)) +
+  geom_histogram(fill = "salmon", color = "black", alpha = 0.7, bins = 10) +
+  geom_vline(xintercept = 55, lwd = 2, linetype = "dashed") +
+  theme_minimal()
+
+# 並べて表示
+a + b
+```
+:::  
+
+## 統計的検定の手順
+
+1. 確率モデルの設定
+- 母数について仮説を立てる。この母数は確率モデル（確率分布）のパラメータと対応しているという仮定が必要。
+
+  - 先行研究の結果、得られたデータの分布などから適切な確率モデルを選ぶ必要がある
+  
+2. 帰無仮説の設定
+- 例えば、映画を見ると英単語の学習に効果的だということを調べる場合、映画を見る群と、映画を見ない群を用意する。二つの群の平均値の差が0でなければ、映画を見ることに何らかな効果があると主張できる。この場合、以下のような帰無仮説を立てる。
+
+  - 帰無仮説：二つの群の平均値差は0
+
+3. 検定統計量の設定
+
+4. 有意水準（ *α* ）の設定
+- 慣例的に5%が用いられる。
+- 帰無仮説を偽とする場合でも、最大5%程度はそれが間違えている可能性を表す。
+
+  - 分析の前に決定し、結果を見て有意水準を大きくするのは、研究倫理に反するとみられる可能性が大いにある。
+    - 分析の前に0.05よりも大きくすることはよい。
+
+5. 検定統計量の実現値の計算
+
+## 統計的検定で必要な知識
+
+### *p* 値
+- 検定統計量を変換し、有意水準と比較しやすくしたもの
+
+  - 検定統計量の実現値が大きいほど*p*値は小さくなる
+  
+- 上記の手順では、検定統計量の実現値と棄却域の範囲を確認して、帰無仮説が棄却されるかを判断していた。しかし、コンピュータソフトウェアでは、*p*値が表示され、この値が事前に設定した有意水準よりも大きいかもしくは小さいかを確認して棄却の有無を判断する。
+
+```{r}
+t.test(df$Data1, mu = 55)
+t.test(df$Data2, mu = 55)
+```
+
+::: infobox
+e-やe+は指数的記法です。6.106e-05であれば、6.106 × 10^(-5)なので、0.を合わせて0が5つ6の前につきます。逆に6.106e+05であれば6.106 × 10^5です。Rでは```options```関数で通常の値に戻して表示できます。
+
+```{r}
+options(scipen = 999)
+t.test(df$Data2, mu = 55)
+```
+:::
+
+### 統計的検定の誤りと検出力
+- 統計的検定では、限界点として、100%正しいことは保証されない。
+
+  有意水準が5%であれば、5%の誤った主張を許すことになる
+  
+- 第一種の誤り（type Ⅰ error）
+
+  - 帰無仮説が真なのに、誤って偽だと主張すること
+  
+  - 有意水準 *α* の値と一致
+  
+- 第二種の誤り（type Ⅱ error）
+
+  - 帰無仮説が偽なのに、それを偽であると言えない（保留）すること
+
+  - *β* で表す
+
+```{r, echo = F, fig.cap = "image source: https://www.statisticssolutions.com/to-err-is-human-what-are-type-i-and-ii-errors/"}
+frink <- magick::image_read("C:/Users/terai-masato/Documents/stat_class_2025/picture/error.png")
+magick::image_write(frink, "C:/Users/terai-masato/Documents/stat_class_2025/picture/error.png", format = "png")
+knitr::include_graphics("C:/Users/terai-masato/Documents/stat_class_2025/picture/error.png")
+```
+
+- 検出力（power）
+
+  - 帰無仮説が偽であるとき、正しく帰無仮説を棄却できる確率
+
+  - 1 - *β* で表す
+  
+  - **統計的検定では、*α* を維持しながら検出力を高くするのが望ましい**
+  
+  - 大きい効果ほど、大きい標本サイズほど、統計的有意を検出しやすくなる
+  
+    - 有意水準を小さくすると、第二種の誤りが大きくなる = *α* を小さくすると、*β* は大きくなる
+  
+    - 帰無分布と真の母数の標本分布が離れるため、検出力は、帰無仮説と母平均の差が大きいほど、標本サイズが大きいほど大きくなる。
+
+# ここにGifを入れられたら最高
+
+```{r}
+
+```
+
+# 平井 et al. の内容を付け加える（効果量、片側、両側）
+
+## ハンズオンセッション
+# t検定？？
+
+
+## 次週までの課題
+### 課題内容
+
+1. 小テストに向けて今回の内容を復習する。必ず手でコードを入力してRを実行する。
+
+2. あなたには高校生の弟がいます（平均までは知っているが分散は知らない）。ポケモンが大好きな弟から以下の質問が来たとする。この答えを具体的な数値や図を基に回答してください。R Markdownファイルで作成し、HTMLファイルに変換しそれを提出してください。
+
+  - 「全ポケモンのHPの平均って大体どれくらい？」
+  - 「その平均ってどれくらい正確なの（どれくらいの幅があるの）？」
+  - 「ポケモンのステータスってどれくらいの値が一番多いの？」
+
+- **Rで数値を出力するだけでなく、それぞれの質問への回答を高校生にもわかりやすく文字で記載してください。**
+
+### 提出方法
+- メールにファイルを添付して送信。
+- 締め切りは今週の木曜日まで
+
+## 参考文献
+
+- 心理学統計法　放送大学
+- https://www.isc.meiji.ac.jp/~hirukawa/randomevent/test1.htm
+
+```{=html}
+<style>
+.infobox {
+  padding: 1em 1em 1em 4em;
+  margin-bottom: 10px;
+  border: 2px solid orange;
+  border-radius: 10px;
+  background: #f5f5f5 5px center/3em no-repeat;
+}
+
+.beg {
+  background-image: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjHtu3kBX8P39WYBBAjar9c8c1ladK2SYL6_gEMXFweQfauWVhSvCQP5KELsPX5KNL1uOddLLQ-aeMxv904OW_NFFfANhBYObfBV09KO2EXehrb9kMdCLZY1afsChib-7zIkBJbG6OrbJpM/s400/aisatsu_kodomo_boy.png");}
+
+.caution {
+  background-image: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhzMqkpQ7vLUKvumbm6AFwTLQiCe7tlDb2Q0MAiISLsesZHnhj0kbRjB4U3se3UrDIHfIy0hlahyphenhyphenQu-V2tOR2LcV_lX7U8P5a8jtqPYv3Ah4L-JoYi8PhoaoehumGIdp2vrsX0rRyhXqwA/s800/mark_chuui.png");}
+  
+</style>
+```
